# seedproof

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: record-format.md
examples/: README.md  make_runs.py  sse-capture.txt
scripts/: smoke.sh
src/seedproof/: __init__.py  __main__.py  align.py  cli.py  errors.py  forensics.py  ingest.py  matrix.py  record.py  report.py
tests/: conftest.py  test_align.py  test_cli.py  test_examples.py  test_forensics.py  test_ingest.py  test_matrix.py  test_record.py  test_report.py
